--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
    
     <!-- Local Script -->
-    <!-- <script defer src="mapthing.js"></script> -->
+    <!-- <script defer src="/mapthing/mapthing.js"></script> -->
     <script defer src="/recipething/recipething.js"></script>
 
     <!-- <script defer src="/mapthing.js"></script> -->
