new project, probably should put this into a new branch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="projects">
-      <a href="/recipething">go to recipe thing</a>
+      <a href="/recipething">go to recipe thing</a> <br />
+      <a href="/foodholidaything">go to foodholiday thing</a>
     </div>
   </body>
 </html>
